Changed Purple Tetris Block to Pink Tetris Block and completed LOLCAT

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=Grüner Tetris-Block
 tile.yellow_tetris_block.name=Gelber Tetris-Block
 tile.orange_tetris_block.name=Orangefarbener Tetris-Block
 tile.red_tetris_block.name=Roter Tetris-Block
-tile.purple_tetris_block.name=Lila Tetris-Block
+tile.pink_tetris_block.name=Rosa Tetris-Block
 tile.gray_tetris_block.name=Grauer Tetris-Block
 tile.tetris_glass.name=Tetris-Glas
 tile.japanese_tetris_cushion.name=Japanischer Tetris-Kissen
