--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ uǝǝɹפ
 tile.yellow_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ʍollǝ⅄
 tile.orange_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ǝƃuɐɹO
 tile.red_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ pǝᴚ
-tile.purple_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ǝldɹnԀ
+tile.pink_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ʞuᴉԀ
 tile.gray_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ʎɐɹפ
 tile.tetris_glass.name=ssɐlפ sᴉɹʇǝ┴
 tile.japanese_tetris_cushion.name=uoᴉɥsnƆ sᴉɹʇǝ┴ ǝsǝuɐdɐſ
