--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=Bloque Tetris verde
 tile.yellow_tetris_block.name=Bloque Tetris amarillo
 tile.orange_tetris_block.name=Bloque Tetris naranja
 tile.red_tetris_block.name=Bloque Tetris rojo
-tile.purple_tetris_block.name=Bloque Tetris morado
+tile.pink_tetris_block.name=Bloque Tetris rosado
 tile.gray_tetris_block.name=Bloque Tetris gris
 tile.tetris_glass.name=Bloque Tetris de cristal
 tile.japanese_tetris_cushion.name=Cojín Tetris japonés
