--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=bloc taitri ver cool
 tile.yellow_tetris_block.name=bloc tirti jon
 tile.orange_tetris_block.name=blok taitri ranj
 tile.red_tetris_block.name=blok tetri rouj
-tile.purple_tetris_block.name=blok taitri violet
+tile.pink_tetris_block.name=blok taitri roz
 tile.gray_tetris_block.name=bloc taitri grise
 tile.tetris_glass.name=ver titri
 tile.japanese_tetris_cushion.name=cousin CHINOIIS:!$ ahahha (tetri)
