--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=Bloc Tetris vert
 tile.yellow_tetris_block.name=Bloc Tetris jaune
 tile.orange_tetris_block.name=Bloc Tetris orange
 tile.red_tetris_block.name=Bloc Tetris rouge
-tile.purple_tetris_block.name=Bloc Tetris violet
+tile.pink_tetris_block.name=Bloc Tetris rose
 tile.gray_tetris_block.name=Bloc Tetris gris
 tile.tetris_glass.name=Verre Tetris
 tile.japanese_tetris_cushion.name=Coussin Tetris japonais
