--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -27,14 +27,14 @@ tile.ice_flower.name=ice flow
 tile.boomerang_flower.name=triangle ting flow
 tile.cloud_flower.name=clown flow
 tile.cloud_block.name=clown blok
-tile.blue_mushroom.name=<newline>
-tile.green_mushroom.name=<newline>
-tile.yellow_mushroom.name=<newline>
-tile.purple_mushroom.name=<newline>
-tile.blue_mushroom_block.name=<newline>
-tile.green_mushroom_block.name=<newline>
-tile.yellow_mushroom_block.name=<newline>
-tile.purple_mushroom_block.name=<newline>
+tile.blue_mushroom.name=blu mush
+tile.green_mushroom.name=grin mush
+tile.yellow_mushroom.name=yolo mush
+tile.purple_mushroom.name=purpel mush
+tile.blue_mushroom_block.name=blue mush blok
+tile.green_mushroom_block.name=gren mush blok
+tile.yellow_mushroom_block.name=yolo mush blok
+tile.purple_mushroom_block.name=purpl mush blok
 
 tile.blue_tetris_block.name=cool blu tetri
 tile.blue_tetris_block.name=cool lit bloo tetri
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=cool gren tetri
 tile.yellow_tetris_block.name=cool yeule tetri
 tile.orange_tetris_block.name=cool oranj tetri
 tile.red_tetris_block.name=cool blood tetri
-tile.purple_tetris_block.name=cool gay tetri
+tile.pink_tetris_block.name=cool pik tetri
 tile.gray_tetris_block.name=cool gree tetri
 tile.tetris_glass.name=tetri glazz
 tile.japanese_tetris_cushion.name=jaPAN tetri sleep
@@ -62,7 +62,7 @@ tile.blue_candy_cane_pillar.name=blue big christmas cane
 tile.green_candy_cane_pillar.name=gren big christmas cane
 tile.yellow_candy_cane_pillar.name=yelou big christmas cane
 tile.red_candy_cane_pillar.name=redd big christmas cane
-tile.purple_candy_cane_pillar.name=gay big christmas cane
+tile.purple_candy_cane_pillar.name=purpl big christmas cane
 
 tile.koretato_block.name=Koretato blok
 
