--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=綠色俄羅斯方塊
 tile.yellow_tetris_block.name=黃色俄羅斯方塊
 tile.orange_tetris_block.name=橙色俄羅斯方塊
 tile.red_tetris_block.name=紅色俄羅斯方塊
-tile.purple_tetris_block.name=紫色俄羅斯方塊
+tile.pink_tetris_block.name=<newline>
 tile.gray_tetris_block.name=灰色俄羅斯方塊
 tile.tetris_glass.name=俄羅斯方塊玻璃
 tile.japanese_tetris_cushion.name=日式俄羅斯方塊坐墊
