--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -42,7 +42,7 @@ tile.green_tetris_block.name=Groen Tetris blok
 tile.yellow_tetris_block.name=Geel Tetris blok
 tile.orange_tetris_block.name=Oranje Tetris blok
 tile.red_tetris_block.name=Rood Tetris blok
-tile.purple_tetris_block.name=Paars Tetris blok
+tile.pink_tetris_block.name=Roze Tetris blok
 tile.gray_tetris_block.name=Grijs Tetris blok
 tile.tetris_glass.name=Tetris glas
 tile.japanese_tetris_cushion.name=Japans Tetris kussen
