--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -68,13 +68,14 @@ tile.koretato_block.name=Bloc Koretato
 
 --- ITEMS ---
 item.vanadium.name=Vanadium
+item.bandage.name=Bandage
 item.wheat_flour.name=Farine de blé
 item.caramel_cube.name=Cube de caramel
 item.crepe.name=Crêpe
 item.chocolate_crepe.name=Crêpe au chocolat
 item.caramel_crepe.name=Crêpe au caramel
 item.candy_cane.name=Sucre d'orge
-item.bandage.name=Bandage
+item.burger.name=Burger
 
 item.super_mushroom.name=Super champignon
 item.peach.name=Pêche
