--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -68,13 +68,14 @@ tile.koretato_block.name=Koretato blok
 
 --- ITEMS ---
 item.vanadium.name=shiny purple
+item.bandage.name=banaj
 item.wheat_flour.name=wet floor
 item.caramel_cube.name=tiny caraml boii
 item.crepe.name=creeepe
 item.chocolate_crepe.name=crepe + choco
 item.caramel_crepe.name=crepe + caraml good
 item.candy_cane.name=christmas cane
-item.bandage.name=banaj
+item.burger.name=burug
 
 item.super_mushroom.name=SUPA MUSH
 item.peach.name=salty peesh very gud
