Added Ralsei's Hat

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -100,6 +100,8 @@ item.bandana.name=Kopftuch
 
 item.smash_ball.name=Smash Ball
 
+item.ralsei_hat.name=<newline>
+
 item.headphones.name=Kopfhörer
 item.record_blank.name=Leere Musikdiskette
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
