--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -101,6 +101,8 @@ item.bandana.name=Bandana
 
 item.smash_ball.name=Smash Ball
 
+item.ralsei_hat.name=Ralsei's Hat
+
 item.headphones.name=Headphones
 item.record_blank.name=Blank Music Disc
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
