--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -100,6 +100,8 @@ item.bandana.name=banade
 
 item.smash_ball.name=boul smash bros
 
+item.ralsei_hat.name=chapo de ralsi
+
 item.headphones.name=ecouteur
 item.record_blank.name=diske rien dedans
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
