--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -100,6 +100,8 @@ item.bandana.name=Bandana
 
 item.smash_ball.name=Balle Smash
 
+item.ralsei_hat.name=Chapeau de Ralsei
+
 item.headphones.name=Casque audio
 item.record_blank.name=Disque vide
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
