--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -100,6 +100,8 @@ item.bandana.name=banana
 
 item.smash_ball.name=sm4sh bol
 
+item.ralsei_hat.name=ralzi at
+
 item.headphones.name=hedponz
 item.record_blank.name=EMPTY DISC
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
