--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -100,6 +100,8 @@ item.bandana.name=Bandana
 
 item.smash_ball.name=Smash bal
 
+item.ralsei_hat.name=<newline>
+
 item.headphones.name=Koptelefoon
 item.record_blank.name=Blanke muziekplaat
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
