--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -100,6 +100,8 @@ item.bandana.name=手帕
 
 item.smash_ball.name=粉碎球
 
+item.ralsei_hat.name=<newline>
+
 item.headphones.name=耳机
 item.record_blank.name=空白音乐唱片
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
