--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -100,6 +100,8 @@ item.bandana.name=ɐuɐpuɐᗺ
 
 item.smash_ball.name=llɐᗺ ɥsɐɯS
 
+item.ralsei_hat.name=ʇɐH s,ᴉǝslɐᴚ
+
 item.headphones.name=sǝuoɥdpɐǝH
 item.record_blank.name=ɔsᴉp ɔᴉsnW ʞuɐlᗺ
 item.record.champions_road.desc=pɐoᴚ s,uoᴉdɯɐɥƆ - plɹoM ᗡƐ oᴉɹɐW ɹǝdnS
