--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -100,6 +100,8 @@ item.bandana.name=Pañuelo
 
 item.smash_ball.name=Bola Smash
 
+item.ralsei_hat.name=<newline>
+
 item.headphones.name=Cascos
 item.record_blank.name=Disco en blanco
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
