--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -26,6 +26,7 @@ tile.fire_flower.name=ɹǝʍolℲ ǝɹᴉℲ
 tile.ice_flower.name=ɹǝʍolℲ ǝɔI
 tile.boomerang_flower.name=ɹǝʍolℲ ƃuɐɹǝɯooᗺ
 tile.cloud_flower.name=ɹǝʍolℲ pnolƆ
+tile.gold_flower.name=ɹǝʍolℲ ploפ
 tile.cloud_block.name=ʞɔolq pnolƆ
 tile.blue_mushroom.name=ɯooɹɥsnW ǝnlᗺ
 tile.green_mushroom.name=ɯooɹɥsnW uǝǝɹפ
