--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -26,6 +26,7 @@ tile.fire_flower.name=Flor de fuego
 tile.ice_flower.name=Flor de hielo
 tile.boomerang_flower.name=Flor boomerang
 tile.cloud_flower.name=Flor nube
+tile.gold_flower.name=Flor dorada
 tile.cloud_block.name=Bloque nube
 tile.blue_mushroom.name=Champiñón azul
 tile.green_mushroom.name=Champiñón verde
