--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -26,6 +26,7 @@ tile.fire_flower.name=fleu de fee
 tile.ice_flower.name=fleu de glas
 tile.boomerang_flower.name=fleu boumrangue
 tile.cloud_flower.name=fleu nuaj
+tile.gold_flower.name=fleur dore!!
 tile.cloud_block.name=blok nuaj
 tile.blue_mushroom.name=jampinon ble
 tile.green_mushroom.name=jampinon ver
