--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -26,6 +26,7 @@ tile.fire_flower.name=火花
 tile.ice_flower.name=冰花
 tile.boomerang_flower.name=迴旋鏢花
 tile.cloud_flower.name=雲花
+//tile.gold_flower.name=<newline>
 tile.cloud_block.name=雲
 tile.blue_mushroom.name=藍色蘑菇
 tile.green_mushroom.name=綠色蘑菇
@@ -42,7 +43,7 @@ tile.green_tetris_block.name=綠色俄羅斯方塊
 tile.yellow_tetris_block.name=黃色俄羅斯方塊
 tile.orange_tetris_block.name=橙色俄羅斯方塊
 tile.red_tetris_block.name=紅色俄羅斯方塊
-tile.pink_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
 tile.gray_tetris_block.name=灰色俄羅斯方塊
 tile.tetris_glass.name=俄羅斯方塊玻璃
 tile.japanese_tetris_cushion.name=日式俄羅斯方塊坐墊
@@ -92,7 +93,7 @@ item.wing_cap.name=翼帽
 item.gooigi_cap.name=古基的帽子
 item.princess_peach_crown.name=碧奇公主的王冠
 item.princess_daisy_crown.name=黛西公主的王冠
-item.pink_gold_peach_crown.name=<newline>
+//item.pink_gold_peach_crown.name=<newline>
 item.super_crown.name=超級王冠
 
 item.bandana.name=手帕
