--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -26,6 +26,7 @@ tile.fire_flower.name=Fleur de feu
 tile.ice_flower.name=Fleur de glace
 tile.boomerang_flower.name=Fleur boomerang
 tile.cloud_flower.name=Fleur nuage
+tile.gold_flower.name=Fleur d'or
 tile.cloud_block.name=Bloc nuage
 tile.blue_mushroom.name=Champignon bleu
 tile.green_mushroom.name=Champignon vert
