--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -26,7 +26,7 @@ tile.fire_flower.name=火花
 tile.ice_flower.name=冰花
 tile.boomerang_flower.name=回旋镖花
 tile.cloud_flower.name=云花
-//tile.gold_flower.name=<newline>
+//tile.gold_flower.name=金花
 tile.cloud_block.name=云
 tile.blue_mushroom.name=蓝色蘑菇
 tile.green_mushroom.name=绿色蘑菇
@@ -43,7 +43,7 @@ tile.green_tetris_block.name=绿色俄罗斯方块
 tile.yellow_tetris_block.name=黄色俄罗斯方块
 tile.orange_tetris_block.name=橙色俄罗斯方块
 tile.red_tetris_block.name=红色俄罗斯方块
-//tile.pink_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=粉色俄罗斯方块
 tile.gray_tetris_block.name=灰色俄罗斯方块
 tile.tetris_glass.name=俄罗斯方块玻璃
 tile.japanese_tetris_cushion.name=日式俄罗斯方块坐垫
@@ -93,7 +93,7 @@ item.wing_cap.name=翼帽
 item.gooigi_cap.name=古基的帽子
 item.princess_peach_crown.name=碧奇公主的王冠
 item.princess_daisy_crown.name=黛西公主的王冠
-//item.pink_gold_peach_crown.name=<newline>
+//item.pink_gold_peach_crown.name=碧奇公主的粉金王冠
 item.super_crown.name=超级王冠
 
 item.bandana.name=手帕
