--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -78,7 +78,7 @@ item.candy_cane.name=Zuckerstange
 item.bandage.name=Verband
 
 item.super_mushroom.name=Super-Pilz
-item.peach.name=Peach
+item.peach.name=Pfirsich
 item.cape_feather.name=Federumhang
 item.super_star.name=Super Stern
 item.yellow_coin.name=Gelbe Münze
