Added Stairs models and more

--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -7,7 +7,9 @@ itemGroup.mubble_costumes_tab=Mubble Costumes
 tile.vanadium_block.name=Block of Vanadium
 tile.vanadium_ore.name=Vanadium Ore
 tile.red_bricks.name=Red Bricks
+tile.red_bricks_stairs.name=Red Bricks Stairs
 tile.white_bricks.name=White Bricks
+tile.white_bricks_stairs.name=White Bricks Stairs
 tile.blunite.name=Blunite
 tile.polished_blunite.name=Polished Blunite
 tile.carbonite.name=Carbonite
